--- a/Public/livros/addLivro.css
+++ b/Public/livros/addLivro.css
@@ -9,11 +9,52 @@ body {
     width: 100%;
 }
 form {
-    padding: 20px;
-    border-radius: 30px;
+    width: 60vw;
+    padding: 30px;
+    border-radius: 20px;
     border: 1px solid black;
-    background-color: #f1f1f1;
-    z-index: 0;
+    background-color: #DADADA;
+    z-index: 1000;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+}
+form button {
+    background-color: red;
+    color: white;
+    height: 35px;
+    width: 175px;
+    border-radius: 20px;
+    padding: 7px;
+    font-size: 22px;
+    margin-top: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+form label {
+    font-size: 18px;
+    color: black;
+}
+form input {
+    font-size: 20px;
+    width: 80%;
+    padding: 8px 8px 8px 15px;
+    border-radius: 20px;
+    color: #646464;
+    background-color: #FBFBFB;
+    border: 1px solid #646464;
+}
+form select {
+    font-size: 20px;
+    width: 82%;
+    padding: 8px 8px 8px 15px;
+    border-radius: 20px;
+    color: #646464;
+    background-color: #FBFBFB;
+}
+form h1 {
+    width: 60vw;
 }
 header {
     background: rgb(32,32,32);
@@ -38,7 +79,7 @@ main {
     align-items: center;
     justify-content: center;
     flex-flow: column;
-    z-index: -2;
+    z-index: 0;
 }
 .le {
     width: 100%;
@@ -56,7 +97,7 @@ a {
     width: 100%;
     height: 100%;
     position: absolute;
-    z-index: -1;
+    z-index: 1;
     background-color: rgba(0, 0, 0, 0.37);   
 }
 #livroForm {
