--- a/Public/alunos/presença.css
+++ b/Public/alunos/presença.css
@@ -1,5 +1,6 @@
 *{
     margin: 0;
+    box-sizing: border-box;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 body {
@@ -23,13 +24,16 @@ body {
     background-color: rgba(255, 255, 255, 0.890);
     border-radius: 30px;
 }
+
 form {
     width: 690px;
     height: 300px;
     display: flex;
     flex-flow: column;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
+    padding-top: 30px;
+    padding-inline:40px ;
 }
 #linha {
     height: 1px;
@@ -51,15 +55,16 @@ form {
 button {
     background-color: red;
     color: white;
-    height: 35px;
-    width: 135px;
+    height: 50px;
+    width: 165px;
     border-radius: 20px;
     padding: 7px;
-    font-size: 18px;
+    font-size: 16px;
     margin-top: 25px;
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-left: 240px;
 }
 a {
     color: blue;
@@ -72,4 +77,37 @@ a {
 }
 #logo img {
     width: 200px;
+}
+#linha_do_email{
+    height: 1px;
+    width: 133px;
+    background-color: #FF2727;
+}
+legend{
+    font-size: 2.5rem;
+}
+#email{
+        background-color: none;
+        border: none; /* Remove a borda */
+        outline: none; /* Remove o contorno ao clicar */
+        padding-bottom: 0;
+}
+input {
+    border: none;
+    outline: none;
+    padding: 0px;
+    background: none;
+    border-radius: 5px;
+    margin-bottom: none;
+    font-size: 1.3rem;
+  }
+#linha_do_input_email{
+    height: 1px;
+    width: 633px;
+    background-color: #A0A0A0;
+    margin-top: none;
+}
+.espaço_do_email{
+    display: grid;
+    grid-gap: 1px;
 }
