--- a/Public/alunos/cadastro.css
+++ b/Public/alunos/cadastro.css
@@ -6,7 +6,7 @@ body {
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
     flex-flow: column;
     background-color: black;
     height: 100vh;
@@ -26,14 +26,20 @@ h2 {
 }
 #title {
     background-color: rgba(255, 255, 255, 0.89);
+    padding: 10px 30px;
+    border-radius: 30px;
+    width: 30vw;
+    text-align: center;
 }
 form {
     display: flex;
     flex-flow: column;
+    align-items: center;
     background-color: rgba(255, 255, 255, 0.89);
-    padding: 20px 30px;
+    padding: 15px 30px;
     border-radius: 30px;
-    gap: 10px;
+    gap: 20px;
+    width: 30vw;
 }
 form button {
     background-color: red;
@@ -44,6 +50,7 @@ form button {
     padding: 7px;
     font-size: 22px;
     margin-top: 25px;
+    margin-bottom: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -52,4 +59,51 @@ form button {
     width: 100%;
     height: 2px;
     background-color: #FF2727;
+}
+#x {
+    display: flex;
+    flex-flow: column;
+    align-items: flex-start;
+    gap: 10px;
+    width: 100%;
+}
+#x input {
+    width: 100%;
+    background-color: transparent;
+    border: 0;
+    border-bottom: 1px solid #A0A0A0;
+    outline: 0;
+    font-size: 20px;
+    color: #5f5f5f;
+}
+#y {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+#y select {
+    width: 80%;
+    background-color: transparent;
+    border: 0;
+    border-bottom: 1px solid #A0A0A0;
+    outline: 0;
+    font-size: 20px;
+    color: #5f5f5f;
+}
+.voltar {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+}
+.voltar img {
+    padding: 10px 20px;
+}
+.senai {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+}
+.senai img {
+    width: 207px;
+    padding: 30px 0 0 30px;
 }
