--- a/Public/alunos/presença.css
+++ b/Public/alunos/presença.css
@@ -36,8 +36,8 @@ form {
     padding-inline:40px ;
 }
 #linha {
-    height: 1px;
-    width: 643px;
+    width: 100%;
+    height: 2px;
     background-color: #FF2727;
 }
 #title {
@@ -61,6 +61,7 @@ button {
     padding: 7px;
     font-size: 16px;
     margin-top: 25px;
+    margin-bottom: 15px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -110,4 +111,9 @@ input {
 .espaço_do_email{
     display: grid;
     grid-gap: 1px;
+}
+#linha_t {
+    width: 90%;
+    height: 2px;
+    background-color: #FF2727;
 }
