--- a/Public/livros/addEmprestimo.css
+++ b/Public/livros/addEmprestimo.css
@@ -1,6 +1,7 @@
 *{
     margin:  0;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    box-sizing: border-box;
 }
 body {
     display: flex;
@@ -17,8 +18,46 @@ form {
     z-index: 1000;
     display: flex;
     flex-flow: column;
-    align-items: center;
+    align-items: start;
 }
+form .dropdown {
+    position: relative;
+    display: inline-block;
+    user-select: none;
+    margin-bottom: 20px;
+    padding: 5px;
+    background: rgb(95, 95, 95);
+    color: white;
+}
+.dropdown:hover {
+    background: rgb(84, 84, 84);
+    cursor: pointer;
+}
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+form .dropdown-content {
+    display: none;
+    position: absolute;
+    inset: 0;
+    translate: 0 100%;
+    min-width: 200px;
+    background-color: red;
+    width: fit-content;
+    box-shadow: 1px 1px 1px black;
+    z-index: 1;
+}
+#dropdownText {
+    margin-right: 5px;
+}
+.dropdown-content input {
+    width: 100%;
+    padding: 8px;
+}
+.dropdown-content select {
+    width: 100%;
+    height: 50px;
+} 
 form button {
     background-color: red;
     color: white;
@@ -29,6 +68,7 @@ form button {
     font-size: 22px;
     margin-top: 25px;
     display: flex;
+    align-self: center;
     align-items: center;
     justify-content: center;
 }
@@ -36,7 +76,8 @@ form label {
     font-size: 18px;
     color: black;
 }
-form input {
+form #Data_de_Devolucao,
+#Email {
     font-size: 20px;
     width: 80%;
     padding: 8px 8px 8px 15px;
