--- a/Public/alunos/verPresenca.css
+++ b/Public/alunos/verPresenca.css
@@ -89,6 +89,7 @@ main h2 {
     width: 100%;
 }
 #list {
+    align-self: start;
     grid-column-start: 1;
     grid-column-end: 3;
     grid-row-start: 2;
