--- a/Public/alunos/cadastro.css
+++ b/Public/alunos/cadastro.css
@@ -55,6 +55,13 @@ form button {
     align-items: center;
     justify-content: center;
 }
+form a {
+    text-decoration: none;
+}
+button:hover {
+    transform: scale(1.1);
+    cursor: pointer;
+}
 #linha {
     width: 100%;
     height: 2px;
@@ -94,6 +101,10 @@ form button {
     width: 100%;
     display: flex;
     justify-content: flex-start;
+    margin-bottom: 20px;
+}
+.voltar:hover img {
+    transform: scale(1.1);
 }
 .voltar img {
     padding: 10px 20px;
