--- a/Public/livros/addEmprestimo.css
+++ b/Public/livros/addEmprestimo.css
@@ -72,6 +72,10 @@ form button {
     align-items: center;
     justify-content: center;
 }
+button:hover {
+    transform: scale(1.1);
+    cursor: pointer;
+}
 form label {
     font-size: 18px;
     color: black;
