novo backup e adicionado verEmprestimos

--- a/Public/alunos/verPresenca.css
+++ b/Public/alunos/verPresenca.css
@@ -105,9 +105,7 @@ main h2 {
     overflow-y: auto;
 }
 #listPresenca::-webkit-scrollbar {
-
-    width: 12px; /* Largura da barra de rolagem vertical */
-    height: 12px; /* Altura da barra de rolagem horizontal */
+    display: none;
 }
 .column {
     height: 100%;
