--- a/Public/livros/verEmprestimo.css
+++ b/Public/livros/verEmprestimo.css
@@ -152,7 +152,7 @@ main h2 {
 }
 .row {
     display: grid;
-    grid-template-columns: 1fr 6fr 6fr 4fr 4fr;
+    grid-template-columns: 1fr 6fr 6fr 4fr 4fr 3fr;
     background: var(--list_border);
     font-weight: bold;
     gap: 1px;
