--- a/Public/livros/verEmprestimo.css
+++ b/Public/livros/verEmprestimo.css
@@ -116,12 +116,16 @@ main h2 {
 #listEmprestimo,
 #columns {
     margin: 0;
-    width: 1100px;
+    width: 1200px;
+}
+#columns {
+    color: white;
 }
 #listEmprestimo {
     height: fit-content;
     max-height: 700px;
     overflow-y: auto;
+    overflow-x: visible;
 }
 #listEmprestimo::-webkit-scrollbar {
     display: none;
@@ -151,13 +155,32 @@ main h2 {
     rotate: 180deg;
 }
 .row {
+    position: relative;
     display: grid;
-    grid-template-columns: 1fr 6fr 6fr 4fr 4fr 3fr;
+    grid-template-columns: 1fr 6fr 6fr 3fr 3fr 4fr;
     background: var(--list_border);
     font-weight: bold;
     gap: 1px;
     justify-items: start;
     padding-top: 1px;
+}
+.status {
+    display: flex;
+}
+.aluno_info .acoes {
+    display: none;
+    background: #FF2727;
+    color: white;
+    height: 20px;
+    width: 50px;
+    right: 2%;
+}
+.acoes:hover {
+    transform: scale(1.04);
+    cursor: pointer;
+}
+.row:hover .acoes {
+    display: block;
 }
 .ordemBtn {
     width: 30px;
@@ -196,4 +219,40 @@ main h2 {
 #addEmprestimo button:hover {
     transform: scale(1.1);
     cursor: pointer;
+}
+
+/* parte do popup */
+.popup-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.popup {
+    background: white;
+    padding: 20px;
+    border-radius: 8px;
+    width: 300px;
+    text-align: center;
+}
+
+.popup button {
+    margin-top: 10px;
+    padding: 5px 10px;
+    background-color: #007BFF;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.popup button:hover {
+    background-color: #0056b3;
 }
