--- a/Public/alunos/verPresenca.css
+++ b/Public/alunos/verPresenca.css
@@ -1,6 +1,7 @@
 * {
     margin: 0 auto;
     padding: 0 auto;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     box-sizing: border-box;
 }
 :root {
@@ -13,15 +14,17 @@ header {
     background: linear-gradient(90deg, rgba(32,32,32,1) 0%, rgba(168,168,168,1) 100%);
     width: 100%;
     height: var(--header-size);
+    padding-inline: 5%;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 header img {
-    margin-left: 10%;   
-    height: 30px;
+    margin: 0;
 }
 /* Contêiner do campo de pesquisa */
 .search-container {
+    margin: 0;
     position: relative;
     width: 400px; /* Ou um tamanho fixo, se preferir */
     min-width: 100px;
@@ -67,7 +70,6 @@ header img {
     font-size: 12px;
 }
 .le a {
-    text-decoration: none;
     color: white;
 }
 main {
@@ -90,6 +92,7 @@ main h2 {
 }
 #list {
     align-self: start;
+    justify-self: center;
     grid-column-start: 1;
     grid-column-end: 3;
     grid-row-start: 2;
