--- a/Public/livros/addLivro.css
+++ b/Public/livros/addLivro.css
@@ -1,6 +1,7 @@
 *{
     margin:  0;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    box-sizing: border-box;
 }
 body {
     display: flex;
@@ -128,4 +129,8 @@ a {
 #livroForm {
     min-width: fit-content;
     width: 60vw;
+}
+#livroForm p {
+    color: gray;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.295);
 }
