--- a/Public/livros/verEmprestimo.css
+++ b/Public/livros/verEmprestimo.css
@@ -1,6 +1,7 @@
 * {
     margin: 0 auto;
     padding: 0 auto;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     box-sizing: border-box;
 }
 :root {
@@ -13,16 +14,18 @@ header {
     background: linear-gradient(90deg, rgba(32,32,32,1) 0%, rgba(168,168,168,1) 100%);
     width: 100%;
     height: var(--header-size);
+    padding-inline: 5%;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     z-index: 3;
 }
 header img {
-    padding: 25px;
-    height: 30px;
+    margin: 0;
 }
 /* Contêiner do campo de pesquisa */
 .search-container {
+    margin: 0;
     position: relative;
     width: 400px; /* Ou um tamanho fixo, se preferir */
     min-width: 100px;
@@ -69,7 +72,6 @@ header img {
     z-index: 3;
 }
 .le a {
-    text-decoration: none;
     color: white;
 }
 main {
@@ -134,10 +136,9 @@ main h2 {
     height: 100%;
     width: 100%;
     padding: 5px;
-}
-#columns .column {
+    text-align: center;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
 }
 #columns .column * {
     margin: 0;
