terminado popup em verLivros

--- a/Public/livros/verLivros.css
+++ b/Public/livros/verLivros.css
@@ -175,7 +175,8 @@ main h1 {
 }
 
 
-#addLivrosBtn {
+#addLivrosBtn,
+.popup button {
     position: absolute;
     right: 5%;
     bottom: 3%;
@@ -192,7 +193,9 @@ main h1 {
     justify-content: center;
     z-index: 5;
 }
-#addLivrosBtn:hover {
+#addLivrosBtn:hover,
+.popup button:hover,
+.linha button {
     transform: scale(1.1);
     cursor: pointer;
 }
@@ -204,10 +207,14 @@ main h1 {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background: #fff;
+    min-width: 30%;
+    min-height: 30%;
+    border-radius: 20px;
+    background: rgb(219, 219, 219);
     padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    box-shadow: 1px 1px 10px rgba(31, 0, 0, 0.5);
     z-index: 1000;
+    padding-bottom: 50px;
 }
 
 .overlay {
@@ -229,4 +236,27 @@ main h1 {
     margin: 10px 0;
     padding: 10px;
     background: #f4f4f4;
+}
+
+.popupInfo {
+    display: flex;
+    gap: 4px;
+    padding: 4px;
+    background: linear-gradient(
+        rgba(255, 214, 214, 0.178),
+        rgba(105, 105, 105, 0.274)
+    );
+    border-bottom: 2px solid black;
+    border-radius: 12px;
+    margin-bottom: 10px;
+    font-size: 1.4rem;
+}
+.popupInfo p:nth-child(1) {
+    text-align: start;
+    margin: 0;
+    color: #FF2727;
+    font-weight: bold;
+}
+.popupInfo p:nth-child(2) {
+
 }
