--- a/Public/livros/verEmprestimo.css
+++ b/Public/livros/verEmprestimo.css
@@ -114,6 +114,7 @@ main h2 {
     grid-column-start: 1;
     grid-column-end: 3;
     grid-row-start: 2;
+    box-shadow: -2px 2px 4px black;
 }
 #listEmprestimo,
 #columns {
